--- a/vine_review_analysis.ipynb
+++ b/vine_review_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZMSpXNUSlIpt4JFtxzahs",
+      "authorship_tag": "ABX9TyOfje8GRg4KVaw2pg/YcVRp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -592,8 +592,8 @@
         "\n",
         "# Output the results of the calculations performed above\n",
         "print(f'The number of reviews that were written by Vine members is: {total_vine_reviews}.')\n",
-        "print(f'The number of 5-star reviews that were written by Vine members is: {fivestar_vine_reviews}.')\n",
-        "print(f'The percentage of 5-star reviews that were written by Vine members is: {per_fivestar_vine_reviews}%.')"
+        "print(f'The number of five-star reviews that were written by Vine members is: {fivestar_vine_reviews}.')\n",
+        "print(f'The percentage of five-star reviews that were written by Vine members is: {per_fivestar_vine_reviews}%.')"
       ],
       "metadata": {
         "colab": {
@@ -629,8 +629,8 @@
         "\n",
         "# Output the results of the calculations performed above\n",
         "print(f'The number of reviews that were written by non-Vine members is: {total_non_vine_reviews}.')\n",
-        "print(f'The number of 5-star reviews that were written by non-Vine members is: {fivestar_non_vine_reviews}.')\n",
-        "print(f'The percentage of 5-star reviews that were written by non-Vine members is: {per_fivestar_non_vine_reviews}%.')"
+        "print(f'The number of five-star reviews that were written by non-Vine members is: {fivestar_non_vine_reviews}.')\n",
+        "print(f'The percentage of five-star reviews that were written by non-Vine members is: {per_fivestar_non_vine_reviews}%.')"
       ],
       "metadata": {
         "colab": {
@@ -655,6 +655,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# This is an alternative way to express the above results\n",
         "# Filter for and count the number of non-five-star Vine review ratings\n",
         "non_fivestar_vine_reviews = paid_df.filter(df['star_rating'] != 5).count()\n",
         "\n",
