--- a/vine_review_analysis.ipynb
+++ b/vine_review_analysis.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOfje8GRg4KVaw2pg/YcVRp",
       "include_colab_link": true
     },
@@ -37,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +111,7 @@
         "id": "Nb8amwdRRJ0U",
         "outputId": "75aa5422-e6be-4c05-d077-dcd34efee2ec"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +141,7 @@
       "metadata": {
         "id": "Pm0fzrOwRd-H"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +169,7 @@
         "id": "RaZlMbL0Rhjl",
         "outputId": "f4a09c46-f1bc-4536-c6ae-aba72c344ea5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +230,7 @@
         "id": "KWjgLWvkR1At",
         "outputId": "a4f63f43-e15d-48cb-fffe-41f97a4b2b77"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +280,7 @@
         "id": "05SYDpDTR5nF",
         "outputId": "63ad938c-2f81-4b88-8bd5-6f5719d1084a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +330,7 @@
         "id": "USj-d4_cR6x9",
         "outputId": "175e8d27-b1cf-494f-95c1-ce2d3a5e323d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wr0LPc8bSpUh",
-        "outputId": "02f010fc-5c20-4612-a8f9-09c6876f6a7e"
+        "outputId": "99b26f6f-6417-4694-9af4-790cd5b2837e"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +389,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 16
         }
       ]
     },
@@ -404,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IWkotRvEUIHM",
-        "outputId": "58852481-226b-477d-be60-dfab817164e5"
+        "outputId": "bb4baef0-114f-4b87-b7e3-ab7eb01b26fc"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,23 +419,23 @@
             "| R4PKAZRQJJX14|          1|           21|         34|   N|                N|\n",
             "|R2CI0Y288CC7E2|          1|           21|         35|   N|                Y|\n",
             "|R127WEQY2FM1T3|          1|          147|        175|   N|                Y|\n",
-            "|R3EZ0EPYLDA34S|          1|           14|         31|   N|                Y|\n",
             "|R2FJ94555FZH32|          2|           55|         60|   N|                N|\n",
             "|R1U3AR67RE273L|          1|           51|         65|   N|                Y|\n",
             "|R3PZOXA5X1U8KW|          4|           31|         36|   N|                N|\n",
             "| R6KTC1OPIOIIG|          2|           19|         34|   N|                Y|\n",
             "|R36O341WWXXKNP|          5|           28|         31|   N|                N|\n",
-            "|R3GSK9MM8DNOYI|          1|            4|         32|   N|                N|\n",
             "|R10LZVBLQHBVJ0|          2|          151|        198|   N|                N|\n",
             "|R1VR5GLGY1GE7N|          1|           49|         51|   N|                Y|\n",
-            "|R3GUUC6NT4QMCL|          1|            5|         36|   N|                N|\n",
-            "|R1ZSD020RT18I5|          1|            7|        139|   N|                N|\n",
-            "|R113X48B575ASY|          1|           15|         45|   N|                N|\n",
-            "| RJLYLGRYH7SFQ|          1|           34|        116|   N|                N|\n",
             "|R2OWDAR0EDEPTF|          1|           23|         28|   N|                N|\n",
-            "|R3CICXKAHN6NUD|          1|            0|         23|   N|                Y|\n",
             "|R29BOS5HMAY1LO|          5|           88|        110|   N|                N|\n",
             "| R8WD0136CETA7|          2|           99|        119|   N|                N|\n",
+            "|R16621F16PQN5A|          3|           24|         31|   N|                Y|\n",
+            "|R1LXBPG1M9DDOC|          1|          102|        106|   N|                N|\n",
+            "| RNEMGSUKJ4535|          2|           21|         25|   N|                Y|\n",
+            "|R3R2UKBFKP1IQ4|          1|           19|         23|   N|                Y|\n",
+            "|R2T90XM5G2DBZA|          3|           15|         22|   N|                Y|\n",
+            "| R5ZMK0Y0KRBRZ|          1|           79|         91|   N|                N|\n",
+            "|R12E2W0XOV3I2S|          1|           24|         30|   N|                Y|\n",
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "only showing top 20 rows\n",
             "\n"
@@ -453,9 +454,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h6PhTEbUSto_",
-        "outputId": "5ff0f47a-315a-4582-a53e-b7c73bb3943d"
+        "outputId": "9f175a5c-8f27-4c47-eff4-bbd301b5ddc7"
       },
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +466,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 18
         }
       ]
     },
@@ -481,9 +482,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jzfv3R5ESu3p",
-        "outputId": "0b6d0fbf-8acc-4fd1-abde-45264c8e8e46"
+        "outputId": "a2c8316e-2fcb-45ca-b123-72946d5abd85"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,9 +532,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RnRjmWHeSzDw",
-        "outputId": "841c1ca5-df24-46db-c435-98a067bc507d"
+        "outputId": "a1b93a22-9a8a-4458-b3c6-bf251d04ac76"
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,17 +601,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OxrPCjrSS2L_",
-        "outputId": "02fc01c4-784c-4531-b154-b76cccf02277"
+        "outputId": "c43b0dfd-4f52-4d67-e152-5545d457fba5"
       },
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The number of reviews that were written by Vine members is: 94.\n",
-            "The number of 5-star reviews that were written by Vine members is: 48.\n",
-            "The percentage of 5-star reviews that were written by Vine members is: 51.06382978723404%.\n"
+            "The number of five-star reviews that were written by Vine members is: 48.\n",
+            "The percentage of five-star reviews that were written by Vine members is: 51.06382978723404%.\n"
           ]
         }
       ]
@@ -637,17 +638,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SITMkEJbS7_a",
-        "outputId": "85eec3d2-570f-4df5-bb19-1fe34024f75e"
+        "outputId": "1c95487c-1d79-42b4-80bd-373492bf5db9"
       },
-      "execution_count": 14,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The number of reviews that were written by non-Vine members is: 40471.\n",
-            "The number of 5-star reviews that were written by non-Vine members is: 15663.\n",
-            "The percentage of 5-star reviews that were written by non-Vine members is: 38.701786464381904%.\n"
+            "The number of five-star reviews that were written by non-Vine members is: 15663.\n",
+            "The percentage of five-star reviews that were written by non-Vine members is: 38.701786464381904%.\n"
           ]
         }
       ]
@@ -677,9 +678,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Acjn2puS-58",
-        "outputId": "da17848f-ae38-4972-bb0a-e3b3b2fa5edc"
+        "outputId": "856cb12b-1660-49f2-ad32-7cca73ec6421"
       },
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
